# Discord-auto-bot

./: README.md
bot/: bot.py  config.json  requirements.txt
ui_cpp/: CMakeLists.txt  main.cpp
